docs/api/qiskit/0.25/qiskit.pulse.RegisterSlot.mdx
---
title: RegisterSlot
description: API reference for qiskit.pulse.RegisterSlot
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.RegisterSlot
---

# qiskit.pulse.RegisterSlot

<Class id="qiskit.pulse.RegisterSlot" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="RegisterSlot(index)">
  Classical resister slot channels represent classical registers (low-latency classical memory).

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  ### \_\_init\_\_

  <Function id="qiskit.pulse.RegisterSlot.__init__" name="__init__" signature="__init__(index)">
    Channel class.

    **Parameters**

    **index** (`int`) – Index of channel.
  </Function>

  ## Methods

  |                                                                                                                  |                                                                  |
  | ---------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------- |
  | [`__init__`](#qiskit.pulse.RegisterSlot.__init__ "qiskit.pulse.RegisterSlot.__init__")(index)                    | Channel class.                                                   |
  | [`assign`](#qiskit.pulse.RegisterSlot.assign "qiskit.pulse.RegisterSlot.assign")(parameter, value)               | Return a new channel with the input Parameter assigned to value. |
  | [`is_parameterized`](#qiskit.pulse.RegisterSlot.is_parameterized "qiskit.pulse.RegisterSlot.is_parameterized")() | Return True iff the channel is parameterized.                    |

  ## Attributes

  |                                                                                              |                                                                                    |
  | -------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------- |
  | [`index`](#qiskit.pulse.RegisterSlot.index "qiskit.pulse.RegisterSlot.index")                | Return the index of this channel.                                                  |
  | [`name`](#qiskit.pulse.RegisterSlot.name "qiskit.pulse.RegisterSlot.name")                   | Return the shorthand alias for this channel, which is based on its type and index. |
  | [`parameters`](#qiskit.pulse.RegisterSlot.parameters "qiskit.pulse.RegisterSlot.parameters") | Parameters which determine the channel index.                                      |
  | `prefix`                                                                                     |                                                                                    |

  ### assign

  <Function id="qiskit.pulse.RegisterSlot.assign" name="assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](qiskit.pulse.channels#channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  ### index

  <Function id="qiskit.pulse.RegisterSlot.index" name="index" signature="property index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Function>

  ### is\_parameterized

  <Function id="qiskit.pulse.RegisterSlot.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  ### name

  <Function id="qiskit.pulse.RegisterSlot.name" name="name" signature="property name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>

  ### parameters

  <Function id="qiskit.pulse.RegisterSlot.parameters" name="parameters" signature="property parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Function>
</Class>

